@@ -1,3 +1,6 @@
+    - Ticket #166 and #167 - The command 'watch' watches the app.pl file as well as all files or dirs
+      that are stated in '-w' command line switch
+
 0.0.6 2017.6.27
     - Ticket #147 - no test output for t/08-* testcases
     - Added a test case for bailador watch command
